<resources>
    <string name="app_name">Movie Advisor</string>
    <string name="password">Password</string>
    <string name="cancel">cancel</string>
    <string name="next">next</string>
    <string name="findmovie1">Find Movie</string>
    <string name="moc1">Movies on calendar</string>
    <string name="sm1">Saved movies</string>
    <string name="imdb1">IMDB-search</string>
    <string name="settings1">Account settings</string>
    <string name="so1">Sign out</string>
    <string name="findmovie2">Find Movie</string>
    <string name="moc2">Movies on calendar</string>
    <string name="sm2">Saved movies</string>
    <string name="imdb2">IMDB-search</string>
    <string name="settings2">Account settings</string>
    <string name="so2">Sign out</string>
    <string name="findmovie3">Find Movie</string>
    <string name="moc3">Movies on calendar</string>
    <string name="sm3">Saved movies</string>
    <string name="imdb3">IMDB-search</string>
    <string name="settings3">Account settings</string>
    <string name="so3">Sign out</string>
    <string name="findmovie4">Find Movie</string>
    <string name="moc4">Movies on calendar</string>
    <string name="sm4">Saved movies</string>
    <string name="imdb4">IMDB-search</string>
    <string name="settings4">Account settings</string>
    <string name="so4">Sign out</string>
    <string name="findmovie5">Find Movie</string>
    <string name="moc5">Movies on calendar</string>
    <string name="sm5">Saved movies</string>
    <string name="imdb5">IMDB-search</string>
    <string name="settings5">Account settings</string>
    <string name="so5">Sign out</string>
    <string name="e_mail">E-mail</string>
    <string name="password2">Password</string>
    <string name="create_account">Create account</string>
    <string name="update_details">Update details</string>
    <string name="user_id">User id:</string>
    <string name="residential_area">Residential area:</string>
    <string name="date">Date</string>
    <string name="earliest_time">Earliest time</string>
    <string name="latest_time">Latest time</string>
    <string name="search">search</string>
    <string name="add_calendar">add calendar</string>
    <string name="save">save</string>
    <string name="e_mail2">E-mail</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="login_with_password">Login with password</string>
    <string name="create_account2">Create account</string>
    <string name="register_new_account">Register new account</string>
    <string name="usernameCreate">Username</string>
    <string name="passwordCreate">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="usernameStart">Username</string>
    <string name="passwordStart">Password</string>
    <string name="create_accountStart">Create account</string>
    <string name="remember_me">Remember me</string>
    <string name="searchmain">search</string>
    <string name="movieName">Movie</string>
    <string name="dateMain">Date</string>
    <string name="earliest_timeMain">Earliest time</string>
    <string name="latest_timeMain">Latest time</string>
    <string name="add_calendarMain">Add calendar</string>
    <string name="list_moviesName">List movies</string>
    <string name="saveMain">Save</string>
    <string name="movieMain2">Movie</string>
    <string name="theatreMain2">Theatre</string>
    <string name="rateMain2">RATE</string>
    <string name="timeMain2">Time</string>
    <string name="dateMain2">Date</string>
    <string name="movieMain4">Movie</string>
    <string name="listMain4">List</string>
    <string name="name_of_the_movie">Name of the movie</string>
    <string name="theatreMIR">Theatre</string>
    <string name="time_and_date">time and date</string>
    <string name="titleMR">Title</string>
    <string name="date_and_timeMR">Date and time</string>
    <string name="placeMR">Place</string>
    <string name="movie_nameRMR">Movie name</string>
</resources>