<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMovies">

    <Spinner
        android:id="@+id/sidemenu"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.077" />

    <Spinner
        android:id="@+id/theatre"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.124" />

    <EditText
        android:id="@+id/movie"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Movie"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theatre"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/date"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theatre"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/earliesttime"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/earliest_time"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theatre"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/latesttime"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/latest_time"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theatre"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchMovie"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/addcalendar"
        android:layout_width="128dp"
        android:layout_height="55dp"
        android:text="@string/add_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/save"
        android:layout_width="128dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/information"
        android:layout_width="365dp"
        android:layout_height="207dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sidemenu"
        app:layout_constraintVertical_bias="0.892" />
</androidx.constraintlayout.widget.ConstraintLayout>